[package]
name = "capt"
version = "3.0.2"
edition = "2024"
description = "SIMD-accelerated nearest-neighbors for point cloud collision checking"
repository = "https://github.com/KavrakiLab/capt"
license = "Apache-2.0"
readme = "../README.md"
keywords = [
    "robotics",
    "collision-checking",
    "simd",
    "nearest-neighbor",
    "point-cloud",
]
categories = ["no-std", "science", "science::robotics", "algorithms"]

[dev-dependencies]
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }

[features]
simd = ["wide"]

[dependencies]
aligned-vec = { version = "0.6.4", default-features = false }
wide = { version = "1.1.1", default-features = false, optional = true}

